Little note about pull requests

--- a/README
+++ b/README
@@ -3,6 +3,8 @@ with Envolve chat service.
 
 http://envolve.com
 
+Accepting pull requests!
+
 
 -----------------------------------------------------------------
 
